# Lazytool

./: .gitignore  ascii-art.txt  buildexe.py  buildexe_linux.py  data.json  installer.iss  pyproject.toml  tes.md
.github/workflows/: build-linux.yml  build-macos.yml  main.yml
lazytool/: __init__.py  __main__.py  app.py  app.tcss  cli.py  data.py
lazytool/panels/: goals_panel.py  journal_panel.py  mood_panel.py  notes_panel.py  stats_panel.py  timeline_panel.py  todo_panel.py
tests/: test_data.py
