[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lazytool"
version = "2.0.0"
description = "A Lazygit-style terminal productivity tool"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.47.0",
]

[project.scripts]
lazytool = "lazytool.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
